--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BEAM Package Registry</title>
+    <script defer data-domain="beam-packages.org" src="https://analytics.byteplug.io/js/script.outbound-links.js"></script>
   </head>
   <body>
     <div id="app"></div>
